--- a/build.xml
+++ b/build.xml
@@ -70,4 +70,9 @@
     nbproject/build-impl.xml file. 
 
     -->
+  <target name="-post-jar">
+    <copy todir="${dist.jar.dir}">
+       <fileset dir="src/fileserver/resources" includes="**"/>
+    </copy>        
+  </target>
 </project>
